--- a/data/styles.css
+++ b/data/styles.css
@@ -1,5 +1,5 @@
 ﻿.ax_default {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -7,50 +7,63 @@
   text-align:center;
   line-height:normal;
 }
+.box_1 {
+}
+.box_2 {
+}
+.box_3 {
+}
+.ellipse {
+}
+._图片 {
+}
 ._一级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   font-size:32px;
   text-align:left;
 }
 ._二级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   font-size:24px;
   text-align:left;
 }
 ._三级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   font-size:18px;
   text-align:left;
 }
 ._四级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   font-size:14px;
   text-align:left;
 }
 ._五级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   text-align:left;
 }
 ._六级标题 {
-  font-family:'Arial Normal', 'Arial';
+  font-family:'微软雅黑';
   font-weight:bold;
   font-style:normal;
   font-size:10px;
   text-align:left;
 }
-._文本段落 {
-  font-family:'微软雅黑';
-  font-weight:400;
-  font-style:normal;
+.label {
+  font-size:14px;
   text-align:left;
+}
+._文本段落 {
+  text-align:left;
+}
+.icon {
 }
